# CVRecognition

./: .gitignore  CMakeLists.txt  README.md  概要设计.md  详细设计.docx  详细设计.md  需求规格.md
cmss_cpp_sdk/: .editorconfig  item.h  nlp.h  ocr.h
cmss_cpp_sdk/base/: base.h  base64.h  http.h  utils.h
forms/: allanalyse.ui  mainui.ui  postentry.ui
header/: ExclReader.h  allanalyse.h  cmssinterface.h  cventry.h  docxreader.h  entry.h  excelwriter.h  filemanage.h  jobdemandsanalysis.h  keywordmatch.h  login.h  login.ui  mainui.h  matchingrateanalysis.h  parserInfo.h  pdfreader.h  picreader.h  postentry.h  singleanalyse.h  store.h  test.h  txtreader.h  ui_allanalyse.h  ui_cventry.h  ui_filemanage.h  ui_login.h  ui_mainui.h  ui_postentry.h  ui_singleanalyse.h
src/: allanalyse.cpp  allanalyse.ui  cmssinterface.cpp  cventry.cpp  cventry.ui  docxreader.cpp  docxreader.h  entry.cpp  excelwriter.cpp  filemanage.cpp  filemanage.ui  jobdemandsanalysis.cpp  jobdemandsanalysis.h  keywordmatch.cpp  login.cpp  main.cpp  mainui.cpp  mainui.ui  matchingrateanalysis.cpp  matchingrateanalysis.h  mian.cpp  parserInfo.cpp  pdfreader.cpp  pdfreader.h  picreader.cpp  postentry.cpp  postentry.ui  singleanalyse.cpp  singleanalyse.ui  store.cpp  test.cpp  test_ocr.cpp  txtreader.cpp
